# c-periphery

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md
docs/: gpio.md  i2c.md  mmio.md  serial.md  spi.md
src/: gpio.c  gpio.h  i2c.c  i2c.h  mmio.c  mmio.h  serial.c  serial.h  spi.c  spi.h
tests/: test_gpio.c  test_gpio_sysfs.c  test_i2c.c  test_mmio.c  test_serial.c  test_spi.c
